--- a/0-source/1-variables/light/_custom_properties.scss
+++ b/0-source/1-variables/light/_custom_properties.scss
@@ -29,6 +29,7 @@
     --skypecord-button-border: rgb(43, 44, 51);
     --skypecord-header-topic-fg: rgb(138, 141, 145);
     --skypecord-header-button-bg: rgb(241, 241, 244);
+    --skypecord-description-fg: rgb(138, 141, 145);
     --skypecord-placeholder-fg: rgb(138, 141, 145);
     --skypecord-stat-fg: rgb(138, 141, 145);
     --skypecord-indicator-bg: rgb(37, 36, 35);
